--- a/templates/game/index.html
+++ b/templates/game/index.html
@@ -1,7 +1,7 @@
 <!-- {% load staticfiles %} -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,12 +14,15 @@
 
         <link rel="stylesheet" type="text/css" href="fonts/gamefont.css">
 
-        <link rel="stylesheet" type="text/css" href="css/bootstrap3.3.5.min.css" >
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/MMO.css">
 
         <title>The Lost Origins</title>
     </head>
-    <body style="background-color: black">
+    <body style="background-color: #415A6F">
+        {% include "chat/players_list.htm" %}
+
+        <!--BEGIN Scripts-->
         <script type="text/javascript" src="js/libs/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="js/libs/rewebsocket.min.js"></script>
         <script type="text/javascript" src="js/libs/util.js"></script>
@@ -48,5 +51,6 @@
                 return window.$authFormLogin
             }
         </script>
+        <!--END Scripts-->
     </body>
 </html>
