Updated site and done login/register.
- Added chat support in maps and realtime messaging.
- Added support for multiple chat rooms.
- Initlal chat layout.
- Fixed authentication exception in socket connection.
- Fixed auth force game start bug.

--- a/authentication/templates/authentication/login_form.htm
+++ b/authentication/templates/authentication/login_form.htm
@@ -12,7 +12,6 @@
 	</div><br />
 	<button id="btnConnect" class="btn btn-primary">Connect</button>
 	<button id="btnRegister" class="btn btn-default">Register</button>
-	<button id="btnForgotPassword" class="btn btn-link btn-sm">Forgot Password?</button>
 	</div>
 </div>
 
@@ -52,6 +51,6 @@
 		$authFormLogin.callSubmitHandler()
 	});
 	$("#btnRegister").bind("click touchstart",function() {
-		window.open('auth/register', '_blank').focus()
+		window.open('/auth/', '_blank').focus()
 	});
 <\/script>
