--- a/templates/_base.htm
+++ b/templates/_base.htm
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block styles %}
+<link rel="stylesheet" href="{% static 'css/theme.css' %}" />
 <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 <link rel="stylesheet" href="{% static 'color/default.css' %}" />
 {% endblock %}
@@ -31,17 +32,21 @@
 						</li>
 						{% if request.user.is_authenticated %}
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ request.user }}</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="avx">YES</a>
-							</div>
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+								{{ request.user }} <b class="caret"></b>
+							</a>
+							<ul class="dropdown-menu">
+								<li class="dropdown-item">
+									<a class="nav-link" href="{% url 'player:profile' %}">View Profile</a>
+								</li>
+								<li class="dropdown-item">
+									<a class="nav-link" href="{% url 'auth:logout' %}">Logout</a>
+								</li>
+							</ul>
 						</li>
 						{% else %}
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">L/R</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="avx">NO</a>
-							</div>
+						<li class="nav-item">
+							<a class="nav-link" href="{% url 'auth:login-register' %}">Login/Register</a>
 						</li>
 						{% endif %}
 					</ul>
@@ -59,7 +64,16 @@
 {% endblock %}
 
 {% block scripts %}
-<!-- Scripts -->
+<script src="{% static 'js/jquery.js' %}"></script>
+<script src="{% static 'js/jquery.scrollTo.js' %}"></script>
+<script src="{% static 'js/jquery.nav.js' %}"></script>
+<script src="{% static 'js/jquery.localScroll.js' %}"></script>
+<script src="{% static 'js/bootstrap.js' %}"></script>
+<script src="{% static 'js/isotope.js' %}"></script>
+<script src="{% static 'js/jquery.flexslider.js' %}"></script>
+<script src="{% static 'js/inview.js' %}"></script>
+<script src="{% static 'js/animate.js' %}"></script>
+<script src="{% static 'js/custom.js' %}"></script>
 {% endblock %}
 
 {% endblock %}
